--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap');
+
+body {
+  margin: auto;
+  height: 1024px;
+  width: auto;
+  background: #ffffff;
+  font-family: 'Lato', sans-serif;
+}
